--- a/platformio.ini
+++ b/platformio.ini
@@ -7,10 +7,25 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/en/stable/projectconf.html
 
+[common]
+build_flags = -D VERSION=1.0 -D DEBUG_LEVEL=0
+lib_deps_builtin =
+  SPI
+lib_deps_external =
+  https://github.com/greenthegarden/AutomationBoard
+  Time
+  TimeAlarms
+  https://github.com/sudar/MemoryFree.git
+  Ethernet
+  PubSubClient@2.6
+  https://github.com/MajenkoLibraries/ICSC
+
 [env:uno]
 platform=atmelavr
 framework=arduino
 board=uno
+build_flags = ${common.build_flags}
+lib_deps = ${common.lib_deps_builtin}, ${common.lib_deps_external}
 
 [platformio]
 src_dir=AutomationBoardMqttController
